--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
-  <head>
+
+<head>
     <title>{{ page_title }}</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -17,20 +18,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&display=swap" rel="stylesheet">
 
-  </head>
+</head>
 
-  <body class="bg-gray-100 nanum-myeongjo-regular" >
+<body class="bg-gray-100 nanum-myeongjo-regular">
     <div class=" container mx-auto max-w-[1280px]">
-    {% section 'header' %}
-    <main role="main">
-      {% section 'hero' %}
-      {% section 'passion' %}
-      {% section 'baby_mother' %}
-      {{ content_for_layout }}
+        {% section 'header' %}
+        <main role="main">
+            {% section 'hero' %}
+            {% section 'content_one' %}
+            {% section 'content_two' %}
+            {{ content_for_layout }}
 
-      {% comment %} {% section 'footer' %} {% endcomment %}
-    </main>
+            {% comment %} {% section 'footer' %} {% endcomment %}
+        </main>
     </div>
-  </body>
-  
+</body>
+
 </html>
