--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,123 +1,121 @@
 <div x-data="{ open: false }">
-  <div class="md:hidden fixed bg-[#F6F0E4] flex flex-row justify-between items-center w-full py-[30px] z-50">
-    <button @click="open=!open" class="pl-[20px] flex flex-col gap-1">
-      <div
-        x-bind:class="open ? 'rotate-45 translate-y-1.5' : ''"
-        class="bg-[#4F4F4F] w-5 h-0.5 transition-all ease-in-out duration-300 z-10"
-      ></div>
-      <div x-bind:class="open ? 'w-0' : 'w-5'" class="bg-[#4F4F4F] h-0.5 transition-all ease-in-out duration-300"></div>
-      <div
-        x-bind:class="open ? '-rotate-45 -translate-y-1.5' : ''"
-        class="bg-[#4F4F4F] w-5 h-0.5 transition-all ease-in-out duration-300"
-      ></div>
-    </button>
-    <div class="absolute flex justify-center items-center w-full -z-10">
-      <a class="fill-black">
-        {% render 'logo-milk-denmark' %}
-      </a>
+    <div class="md:hidden fixed bg-[#F6F0E4] flex flex-row justify-between items-center w-full py-[30px] z-50">
+        <button @click="open=!open" class="pl-[20px] flex flex-col gap-1">
+            <div x-bind:class="open ? 'rotate-45 translate-y-1.5' : ''"
+                class="bg-[#4F4F4F] w-5 h-0.5 transition-all ease-in-out duration-300 z-10"></div>
+            <div x-bind:class="open ? 'w-0' : 'w-5'" class="bg-[#4F4F4F] h-0.5 transition-all ease-in-out duration-300">
+            </div>
+            <div x-bind:class="open ? '-rotate-45 -translate-y-1.5' : ''"
+                class="bg-[#4F4F4F] w-5 h-0.5 transition-all ease-in-out duration-300"></div>
+        </button>
+        <div class="absolute flex justify-center items-center w-full -z-10">
+            <a class="fill-black">
+                {% render 'logo-milk-denmark' %}
+            </a>
+        </div>
+        <div class="flex flex-row gap-3 pr-[20px]">
+            <a href="{{ routes.cart_url }}" class="whitespace-nowrap text-base text-gray-500 hover:text-gray-900">
+                {% render 'icon-shopping-bag' %}
+            </a>
+            <a href="{{ routes.account_register_url }}" class="text-base text-gray-500 hover:text-gray-900">
+                {% render 'icon-search' -%}
+            </a>
+        </div>
     </div>
-    <div class="flex flex-row gap-3 pr-[20px]">
-      <a href="{{ routes.cart_url }}" class="whitespace-nowrap text-base text-gray-500 hover:text-gray-900">
-        {% render 'icon-shopping-bag' %}
-      </a>
-      <a href="{{ routes.account_register_url }}" class="text-base text-gray-500 hover:text-gray-900">
-        {% render 'icon-search' -%}
-      </a>
-    </div>
-  </div>
 
-  <menu x-bind:class="open ? '' : '-translate-y-[100px]'" class="md:hidden fixed z-0 bg-[#e7d7b6] w-full transition-all ease-in-out duration-300 translate-y-[84px] flex flex-col p-4">
-	<a href="">Link#1</a>
-	<a href="">Link#2</a>
-	<a href="">Link#3</a>
-	<a href="">Link#4</a>
-  </menu>
+    <menu x-bind:class='open ? "" : "-translate-y-[100%]"'
+        class="md:hidden fixed z-0 bg-[#e7d7b6] w-full transition-all ease-in-out duration-300 translate-y-[84px] flex flex-col p-4">
+        <a href="">Link#1</a>
+        <a href="">Link#2</a>
+        <a href="">Link#3</a>
+        <a href="">Link#4</a>
+    </menu>
 </div>
 
-<div class="hidden fixed bg-[#F6F0E4] md:flex flex-row justify-between items-center w-full px-[104px] py-[28px] max-w-[1280px]">
-	<div >
-      <a href="/">
-        {% render 'logo-milk-denmark-large' %}
-      </a>
+<div
+    class="hidden fixed bg-[#F6F0E4] md:flex flex-row justify-between items-center w-full px-[104px] py-[28px] max-w-[1280px]">
+    <div>
+        <a href="/">
+            {% render 'logo-milk-denmark-large' %}
+        </a>
     </div>
-	<div class="font-default font-bold text-[#282828] flex flex-row gap-[20px]">
-		<a href="">Shop by Collections</a>
-		<a href="">Origins</a>
-		<a href="">Wholesale</a>
-		<a href="">Contact</a>
-	</div>
-	<div class="flex flex-row gap-[20px]">
-		<a href="{{ routes.cart_url }}" class="whitespace-nowrap text-base text-gray-500 hover:text-gray-900">
-			{% render 'icon-shopping-bag' %}
-		</a>
-		<a href="{{ routes.account_login_url }}" class="text-base text-gray-500 hover:text-gray-900"> {% render 'icon-user' %}</a>
-		<a href="{{ routes.account_register_url }}" class="text-base text-gray-500 hover:text-gray-900">
-			{% render 'icon-search' -%}
-		</a>
-	</div>
+    <div class="font-default font-bold text-[#282828] flex flex-row gap-[20px]">
+        <a href="">Shop by Collections</a>
+        <a href="">Origins</a>
+        <a href="">Wholesale</a>
+        <a href="">Contact</a>
+    </div>
+    <div class="flex flex-row gap-[20px]">
+        <a href="{{ routes.cart_url }}" class="whitespace-nowrap text-base text-gray-500 hover:text-gray-900">
+            {% render 'icon-shopping-bag' %}
+        </a>
+        <a href="{{ routes.account_login_url }}" class="text-base text-gray-500 hover:text-gray-900">
+            {% render 'icon-user' -%}
+        </a>
+        <a href="{{ routes.account_register_url }}" class="text-base text-gray-500 hover:text-gray-900">
+            {% render 'icon-search' -%}
+        </a>
+    </div>
 </div>
 
 <div class="py-10 md:py-[56px]"></div>
 
 {% comment %}
-  <div class="relative bg-white">
+<div class="relative bg-white">
     <div class="mx-auto px-4 sm:px-44">
-      <div class="flex justify-center items-center py-6 md:justify-start md:space-x-10">
-        <!-- STORE NAME / STORE LOGO -->
-        <div class="flex justify-start lg:flex-1 truncate">
-          <img src="{{ 'milk-denmark-logo.png' | asset_img_url: 'large' }}" class="logo" width="138" height="56">
-        </div>
+        <div class="flex justify-center items-center py-6 md:justify-start md:space-x-10">
+            <!-- STORE NAME / STORE LOGO -->
+            <div class="flex justify-start lg:flex-1 truncate">
+                <img src="{{ 'milk-denmark-logo.png' | asset_img_url: 'large' }}" class="logo" width="138" height="56">
+            </div>
 
-        <!-- NAVIGATION MENU -->
-        <nav x-data="{open: false}" class="hidden md:flex space-x-10">
-          {% for link in linklists['main-menu'].links %}
-            {% if link.links != blank %}
-              <div class="relative">
-                <button
-                  x-on:click="open = ! open"
-                  class="inline-flex items-center text-base text-gray-500 hover:text-gray-900"
-                >
-                  {{ link.title }}
-                  {% render 'icon-dropdown' %}
-                </button>
-              </div>
-
-              <div
-                x-show="open"
-                @click.away="open = false"
-                class="absolute z-10 -ml-5 mt-5 transform px-2 w-screen max-w-md sm:px-0 lg:ml-0 lg:left-1/2 lg:-translate-x-1/2"
-              >
-                <div class="shadow-lg border ring-black ring-opacity-5 overflow-hidden rounded-lg">
-                  <div class="relative grid gap-6 bg-white px-5 py-6 sm:gap-8 sm:p-8">
-                    {% for childlink in link.links %}
-                      <a href={{ childlink.url }} class="-m-3 p-3 flex items start rounded-lg hover:bg-gray-100">
-                        <div class="ml-4">
-                          <p class="text-gray-900 text-base font-medium">{{ childlink.title }}</p>
-                        </div>
-                      </a>
-                    {% endfor %}
-                    <!-- CREATE THE SUBLINK -->
-                  </div>
+            <!-- NAVIGATION MENU -->
+            <nav x-data="{open: false}" class="hidden md:flex space-x-10">
+                {% for link in linklists['main-menu'].links %}
+                {% if link.links != blank %}
+                <div class="relative">
+                    <button x-on:click="open = ! open"
+                        class="inline-flex items-center text-base text-gray-500 hover:text-gray-900">
+                        {{ link.title }}
+                        {% render 'icon-dropdown' %}
+                    </button>
                 </div>
-              </div>
 
-            {% else %}
-              <div class="relative">
-                <a href="{{ link.url }}" class="text-base text-gray-500 hover:text-gray-900">{{ link.title }}</a>
-              </div>
-            {% endif %}
-          {% endfor %}
-        </nav>
+                <div x-show="open" @click.away="open = false"
+                    class="absolute z-10 -ml-5 mt-5 transform px-2 w-screen max-w-md sm:px-0 lg:ml-0 lg:left-1/2 lg:-translate-x-1/2">
+                    <div class="shadow-lg border ring-black ring-opacity-5 overflow-hidden rounded-lg">
+                        <div class="relative grid gap-6 bg-white px-5 py-6 sm:gap-8 sm:p-8">
+                            {% for childlink in link.links %}
+                            <a href={{ childlink.url }} class="-m-3 p-3 flex items start rounded-lg hover:bg-gray-100">
+                                <div class="ml-4">
+                                    <p class="text-gray-900 text-base font-medium">{{ childlink.title }}</p>
+                                </div>
+                            </a>
+                            {% endfor %}
+                            <!-- CREATE THE SUBLINK -->
+                        </div>
+                    </div>
+                </div>
 
-        <div class="hidden md:flex items-center justify-end md:flex-1 space-x-5">
-          <a href="{{ routes.cart_url }}" class="whitespace-nowrap text-base text-gray-500 hover:text-gray-900">
-            {% render 'icon-shopping-bag' %}
-          </a>
+                {% else %}
+                <div class="relative">
+                    <a href="{{ link.url }}" class="text-base text-gray-500 hover:text-gray-900">{{ link.title }}</a>
+                </div>
+                {% endif %}
+                {% endfor %}
+            </nav>
 
-          <a href="{{ routes.account_login_url }}" class="text-base text-gray-500 hover:text-gray-900"> {% render 'icon-user' %}</a>
-          <a href="{{ routes.account_register_url }}" class="text-base text-gray-500 hover:text-gray-900"> {% render 'icon-search' %}</a>
+            <div class="hidden md:flex items-center justify-end md:flex-1 space-x-5">
+                <a href="{{ routes.cart_url }}" class="whitespace-nowrap text-base text-gray-500 hover:text-gray-900">
+                    {% render 'icon-shopping-bag' %}
+                </a>
+
+                <a href="{{ routes.account_login_url }}" class="text-base text-gray-500 hover:text-gray-900"> {% render
+                    'icon-user' %}</a>
+                <a href="{{ routes.account_register_url }}" class="text-base text-gray-500 hover:text-gray-900"> {%
+                    render 'icon-search' %}</a>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
+</div>
 {% endcomment %}
