product display test

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -27,6 +27,7 @@
             {% section 'hero' %}
             {% section 'content_one' %}
             {% section 'content_two' %}
+            [% section 'test-product' %]
             {{ content_for_layout }}
 
             {% comment %} {% section 'footer' %} {% endcomment %}
