--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -2,10 +2,43 @@
   <div class="bg-blue-500 flex flex-col p-5 text-white">
     <div class="">{% render 'logo-milk-denmark' %}</div>
     <div class="pt-8 text-[12px]">&copy; {{ 'now' | date: '%Y' }} Milk DENMARK. All rights reserved.</div>
-    <div class="flex flex-row space-x-2">
-      <div class="text-sm">Terms</div>
-      <div class="text-sm">Privary</div>
-      <div class="text-sm">Return Policy</div>
+    <div class="flex justify-between w-full">
+ 
+      <div class="flex flex-row space-x-6">
+        {% for link in linklists['footer'].links %}
+          <a href="{{ link.url }}">{{ link.title }}</a>
+        {% endfor %}
+      </div>
+       
+    <div class="flex justify-end w-full">
+   
+      <div class="flex flex-col space-y-2 px-5">
+        <h1>SHOP</h1>
+        <div class="flex flex-col space-y-2">
+          {% for link in linklists['sub-footer-menu-shop'].links %}
+            <a href="{{ link.url }}">{{ link.title }}</a>
+          {% endfor %}
+        </div>
+      </div>
+    
+      <div class="flex flex-col space-y-2 px-5">
+        <h1>USERS</h1>
+        <div class="flex flex-col space-y-2">
+          {% for link in linklists['sub-footer-menu-users'].links %}
+            <a href="{{ link.url }}">{{ link.title }}</a>
+          {% endfor %}
+        </div>
+      </div>
+   
+      <div class="flex flex-col space-y-2 px-5">
+        <h1>Company</h1>
+        <div class="flex flex-col space-y-2">
+          {% for link in linklists['sub-footer-menu-company'].links %}
+            <a href="{{ link.url }}">{{ link.title }}</a>
+          {% endfor %}
+        </div>
+      </div>
     </div>
   </div>
+</div>
 </footer>
