--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -23,12 +23,13 @@
         </div>
     </div>
 
-    <menu x-bind:class='open ? "" : "-translate-y-[100%]"'
+    <menu x-bind:class='open ? "" : "-translate-y-[50%]"'
         class="md:hidden fixed z-0 bg-[#e7d7b6] w-full transition-all ease-in-out duration-300 translate-y-[84px] flex flex-col p-4">
-        <a href="">Link#1</a>
-        <a href="">Link#2</a>
-        <a href="">Link#3</a>
-        <a href="">Link#4</a>
+        {% for link in linklists['main-menu'].links %}
+            
+              <a href="{{ link.url }}">{{ link.title }}</a>
+            
+          {% endfor %}
     </menu>
 </div>
 
@@ -40,10 +41,15 @@
         </a>
     </div>
     <div class="font-default font-bold text-[#282828] flex flex-row gap-[20px]">
-        <a href="">Shop by Collections</a>
+        {% for link in linklists['main-menu'].links %}
+           
+              <a href="{{ link.url }}">{{ link.title }}</a>
+           
+          {% endfor %}
+        {% comment %} <a href="">Shop by Collections</a>
         <a href="">Origins</a>
         <a href="">Wholesale</a>
-        <a href="">Contact</a>
+        <a href="">Contact</a> {% endcomment %}
     </div>
     <div class="flex flex-row gap-[20px]">
         <a href="{{ routes.cart_url }}" class="whitespace-nowrap text-base text-gray-500 hover:text-gray-900">
