--- a/sections/content_two.liquid
+++ b/sections/content_two.liquid
@@ -14,3 +14,22 @@
         </div>
     </div>
 </section>
+
+{% schema %}
+{
+    "name": "Content Two",
+    "settings": [
+        {
+            "type": "text",
+            "id": "title",
+            "default":"Content Two",
+            "label": "Title"
+        }
+    ],
+    "presets": [
+        {
+            "name": "Content Two"
+        }
+    ]
+}
+{% endschema %}
