--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -19,4 +19,21 @@
 </section>
 
 
-  
+{% schema %}
+{
+    "name": "Hero",
+    "settings": [
+        {
+            "type": "text",
+            "id": "title",
+            "default":"Hero",
+            "label": "Title"
+        }
+    ],
+    "presets": [
+        {
+            "name": "Hero"
+        }
+    ]
+}
+{% endschema %}
