--- a/assets/application.css
+++ b/assets/application.css
@@ -604,16 +604,12 @@ video {
   position: sticky;
 }
 
-.left-36 {
-  left: 9rem;
+.left-1\/3 {
+  left: 33.333333%;
 }
 
 .top-5 {
   top: 1.25rem;
-}
-
-.-z-10 {
-  z-index: -10;
 }
 
 .z-0 {
@@ -626,6 +622,10 @@ video {
 
 .z-50 {
   z-index: 50;
+}
+
+.z-30 {
+  z-index: 30;
 }
 
 .-m-3 {
@@ -682,6 +682,16 @@ video {
   margin-bottom: 2rem;
 }
 
+.-my-\[6px\] {
+  margin-top: -6px;
+  margin-bottom: -6px;
+}
+
+.-my-\[3px\] {
+  margin-top: -3px;
+  margin-bottom: -3px;
+}
+
 .-ml-5 {
   margin-left: -1.25rem;
 }
@@ -720,6 +730,34 @@ video {
 
 .mt-5 {
   margin-top: 1.25rem;
+}
+
+.-mt-\[4px\] {
+  margin-top: -4px;
+}
+
+.-mt-\[5px\] {
+  margin-top: -5px;
+}
+
+.-mt-\[6px\] {
+  margin-top: -6px;
+}
+
+.-ml-\[1px\] {
+  margin-left: -1px;
+}
+
+.-ml-\[4px\] {
+  margin-left: -4px;
+}
+
+.-ml-\[3px\] {
+  margin-left: -3px;
+}
+
+.-mb-\[3px\] {
+  margin-bottom: -3px;
 }
 
 .block {
@@ -779,8 +817,16 @@ video {
   height: 20rem;
 }
 
-.h-\[100px\] {
-  height: 100px;
+.h-\[150px\] {
+  height: 150px;
+}
+
+.h-\[360px\] {
+  height: 360px;
+}
+
+.h-\[440px\] {
+  height: 440px;
 }
 
 .h-auto {
@@ -795,6 +841,14 @@ video {
   height: 100vh;
 }
 
+.h-1 {
+  height: 0.25rem;
+}
+
+.h-\[1px\] {
+  height: 1px;
+}
+
 .w-0 {
   width: 0px;
 }
@@ -807,8 +861,8 @@ video {
   width: 1.25rem;
 }
 
-.w-\[100px\] {
-  width: 100px;
+.w-\[150px\] {
+  width: 150px;
 }
 
 .w-full {
@@ -817,6 +871,18 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-auto {
+  width: auto;
+}
+
+.w-\[\] {
+  width: ;
+}
+
+.w-\[106px\] {
+  width: 106px;
 }
 
 .max-w-4xl {
@@ -853,8 +919,8 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-y-\[100\%\] {
-  --tw-translate-y: -100%;
+.-translate-y-\[50\%\] {
+  --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -873,13 +939,8 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-y-\[100px\] {
-  --tw-translate-y: -100px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-y-\[50\%\] {
-  --tw-translate-y: -50%;
+.-translate-y-\[100\%\] {
+  --tw-translate-y: -100%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -909,8 +970,16 @@ video {
   list-style-type: decimal;
 }
 
+.grid-flow-row {
+  grid-auto-flow: row;
+}
+
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-row {
@@ -969,8 +1038,40 @@ video {
   gap: 20px;
 }
 
-.gap-5 {
-  gap: 1.25rem;
+.gap-\[24px\] {
+  gap: 24px;
+}
+
+.gap-\[40px\] {
+  gap: 40px;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.gap-10 {
+  gap: 2.5rem;
+}
+
+.gap-40 {
+  gap: 10rem;
+}
+
+.gap-\[\] {
+  gap: ;
+}
+
+.gap-8 {
+  gap: 2rem;
+}
+
+.gap-16 {
+  gap: 4rem;
+}
+
+.gap-20 {
+  gap: 5rem;
 }
 
 .space-x-10 > :not([hidden]) ~ :not([hidden]) {
@@ -979,22 +1080,10 @@ video {
   margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.space-x-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
 .space-x-5 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(1.25rem * var(--tw-space-x-reverse));
   margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-4 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1rem * var(--tw-space-x-reverse));
-  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-x-6 > :not([hidden]) ~ :not([hidden]) {
@@ -1034,6 +1123,10 @@ video {
   white-space: nowrap;
 }
 
+.rounded-2xl {
+  border-radius: 1rem;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
@@ -1044,6 +1137,14 @@ video {
 
 .rounded-sm {
   border-radius: 0.125rem;
+}
+
+.rounded {
+  border-radius: 0.25rem;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .border {
@@ -1075,11 +1176,6 @@ video {
   background-color: rgb(231 215 182 / var(--tw-bg-opacity));
 }
 
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
-}
-
 .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -1108,6 +1204,15 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#D2CBB8\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(210 203 184 / var(--tw-bg-opacity));
+}
+
+.bg-\[\] {
+  background-color: ;
 }
 
 .fill-\[\#445442\] {
@@ -1151,6 +1256,30 @@ video {
   padding: 1.25rem;
 }
 
+.p-\[\] {
+  padding: ;
+}
+
+.p-\[4\] {
+  padding: 4;
+}
+
+.p-\[20px\] {
+  padding: 20px;
+}
+
+.p-\[16px\] {
+  padding: 16px;
+}
+
+.p-\[17px\] {
+  padding: 17px;
+}
+
+.p-\[80px\] {
+  padding: 80px;
+}
+
 .px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
@@ -1189,6 +1318,11 @@ video {
 .px-\[104px\] {
   padding-left: 104px;
   padding-right: 104px;
+}
+
+.px-\[25px\] {
+  padding-left: 25px;
+  padding-right: 25px;
 }
 
 .py-1 {
@@ -1261,6 +1395,41 @@ video {
   padding-bottom: 30px;
 }
 
+.py-\[64px\] {
+  padding-top: 64px;
+  padding-bottom: 64px;
+}
+
+.px-\[\] {
+  padding-left: ;
+  padding-right: ;
+}
+
+.px-\[24px\] {
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
+.py-\[\] {
+  padding-top: ;
+  padding-bottom: ;
+}
+
+.py-\[20px\] {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
 .pl-\[20px\] {
   padding-left: 20px;
 }
@@ -1271,6 +1440,22 @@ video {
 
 .pt-8 {
   padding-top: 2rem;
+}
+
+.pl-\[104px\] {
+  padding-left: 104px;
+}
+
+.pb-\[104px\] {
+  padding-bottom: 104px;
+}
+
+.pr-\[104px\] {
+  padding-right: 104px;
+}
+
+.pt-\[80px\] {
+  padding-top: 80px;
 }
 
 .text-left {
@@ -1299,6 +1484,14 @@ video {
   font-size: 12px;
 }
 
+.text-\[18px\] {
+  font-size: 18px;
+}
+
+.text-\[28px\] {
+  font-size: 28px;
+}
+
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
@@ -1324,6 +1517,23 @@ video {
   line-height: 1rem;
 }
 
+.text-\[32px\] {
+  font-size: 32px;
+}
+
+.text-\[20px\] {
+  font-size: 20px;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-\[16px\] {
+  font-size: 16px;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1332,8 +1542,20 @@ video {
   font-weight: 500;
 }
 
+.font-semibold {
+  font-weight: 600;
+}
+
 .uppercase {
   text-transform: uppercase;
+}
+
+.leading-6 {
+  line-height: 1.5rem;
+}
+
+.leading-9 {
+  line-height: 2.25rem;
 }
 
 .leading-normal {
@@ -1342,6 +1564,22 @@ video {
 
 .leading-relaxed {
   line-height: 1.625;
+}
+
+.leading-4 {
+  line-height: 1rem;
+}
+
+.leading-5 {
+  line-height: 1.25rem;
+}
+
+.tracking-tighter {
+  letter-spacing: -0.05em;
+}
+
+.tracking-wider {
+  letter-spacing: 0.05em;
 }
 
 .text-\[\#282828\] {
@@ -1392,6 +1630,15 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-\[\] {
+  color: ;
+}
+
+.text-\[\#F6F0E4\] {
+  --tw-text-opacity: 1;
+  color: rgb(246 240 228 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -1547,6 +1794,10 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:left-\[18\%\] {
+    left: 18%;
+  }
+
   .md\:my-16 {
     margin-top: 4rem;
     margin-bottom: 4rem;
@@ -1562,6 +1813,10 @@ video {
 
   .md\:hidden {
     display: none;
+  }
+
+  .md\:h-\[250px\] {
+    height: 250px;
   }
 
   .md\:w-1\/2 {
@@ -1636,8 +1891,8 @@ video {
     left: 50%;
   }
 
-  .lg\:left-56 {
-    left: 14rem;
+  .lg\:left-\[14\%\] {
+    left: 14%;
   }
 
   .lg\:ml-0 {
@@ -1648,12 +1903,68 @@ video {
     display: block;
   }
 
-  .lg\:h-\[300px\] {
-    height: 300px;
+  .lg\:flex {
+    display: flex;
   }
 
-  .lg\:w-\[200px\] {
-    width: 200px;
+  .lg\:hidden {
+    display: none;
+  }
+
+  .lg\:h-\[250px\] {
+    height: 250px;
+  }
+
+  .lg\:h-auto {
+    height: auto;
+  }
+
+  .lg\:h-0 {
+    height: 0px;
+  }
+
+  .lg\:h-\[600px\] {
+    height: 600px;
+  }
+
+  .lg\:w-\[100px\] {
+    width: 100px;
+  }
+
+  .lg\:w-\[45\%\] {
+    width: 45%;
+  }
+
+  .lg\:w-\[55\%\] {
+    width: 55%;
+  }
+
+  .lg\:w-\[\] {
+    width: ;
+  }
+
+  .lg\:w-\[650px\] {
+    width: 650px;
+  }
+
+  .lg\:w-auto {
+    width: auto;
+  }
+
+  .lg\:w-full {
+    width: 100%;
+  }
+
+  .lg\:w-\[508px\] {
+    width: 508px;
+  }
+
+  .lg\:min-w-\[650px\] {
+    min-width: 650px;
+  }
+
+  .lg\:max-w-full {
+    max-width: 100%;
   }
 
   .lg\:flex-1 {
@@ -1665,9 +1976,32 @@ video {
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
-  .lg\:px-\[14rem\] {
-    padding-left: 14rem;
-    padding-right: 14rem;
+  .lg\:flex-row {
+    flex-direction: row;
+  }
+
+  .lg\:items-center {
+    align-items: center;
+  }
+
+  .lg\:justify-center {
+    justify-content: center;
+  }
+
+  .lg\:gap-\[52px\] {
+    gap: 52px;
+  }
+
+  .lg\:gap-4 {
+    gap: 1rem;
+  }
+
+  .lg\:gap-5 {
+    gap: 1.25rem;
+  }
+
+  .lg\:p-\[104px\] {
+    padding: 104px;
   }
 
   .lg\:px-\[184px\] {
@@ -1675,13 +2009,64 @@ video {
     padding-right: 184px;
   }
 
-  .lg\:py-56 {
-    padding-top: 14rem;
-    padding-bottom: 14rem;
-  }
-
   .lg\:py-\[256px\] {
     padding-top: 256px;
     padding-bottom: 256px;
+  }
+
+  .lg\:py-\[214px\] {
+    padding-top: 214px;
+    padding-bottom: 214px;
+  }
+
+  .lg\:text-center {
+    text-align: center;
+  }
+
+  .lg\:text-\[28px\] {
+    font-size: 28px;
+  }
+
+  .lg\:text-\[32px\] {
+    font-size: 32px;
+  }
+
+  .lg\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .lg\:text-\[40px\] {
+    font-size: 40px;
+  }
+
+  .lg\:leading-10 {
+    line-height: 2.5rem;
+  }
+
+  .lg\:leading-6 {
+    line-height: 1.5rem;
+  }
+
+  .lg\:leading-loose {
+    line-height: 2;
+  }
+
+  .lg\:leading-relaxed {
+    line-height: 1.625;
+  }
+
+  .lg\:leading-\[50px\] {
+    line-height: 50px;
+  }
+
+  .lg\:text-\[\] {
+    color: ;
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:hidden {
+    display: none;
   }
 }
