--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -11,9 +11,11 @@
     {{ content_for_header }}
     <!-- Header hook for plugins -->
     {{ 'application.css' | asset_url | stylesheet_tag }}
+    {{ 'stylesheet.css' |  asset_url | stylesheet_tag }}
     {{ 'application.js' | asset_url | script_tag }}
 
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.1/dist/cdn.min.js"></script>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&display=swap" rel="stylesheet">
@@ -25,9 +27,8 @@
         {% section 'header' %}
         <main role="main">
             {{ content_for_layout }}
-
-            {% section 'footer' %}
         </main>
+        {% section 'footer' %}
     </div>
 </body>
 
