--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -39,45 +39,46 @@
 </footer>
 
 {% comment %} desktop-view {% endcomment %}
-<footer
-    class="bg-[#445442] text-[#F6F0E4] hidden flex-row lg:flex justify-between pt-[80px] pl-[104px] pb-[104px] pr-[104px]">
-    <div class="flex flex-col gap-8">
-        <div>{% render 'logo-milk-footer' %}</div>
-        <div>
-            <div class="text-sm leading-5">
-                © 2024 Milk DENMARK. All rights reserved.
-            </div>
-            <div class="flex flex-row gap-4 text-sm leading-5">
-                <a href="">Terms</a>
-                <a href="">Privacy</a>
-                <a href="">Return Policy</a>
-            </div>
-        </div>
-    </div>
-    <div class="flex flex-row text-[16px] gap-20">
-        <div class="flex flex-col gap-4">
-            <h1 class="font-causten leading-6">SHOP</h1>
-            <div class="flex flex-col gap-2">
-                <a href="" class="leading-6">By Collection</a>
-                <a href="" class="leading-6">By Color</a>
-                <a href="" class="leading-6">By Style</a>
+<footer class="bg-[#445442] text-[#F6F0E4]">
+    <div class="hidden flex-row lg:flex justify-between pt-[80px] pl-[104px] pb-[104px] pr-[104px] max-w-[1280px] mx-auto">
+        <div class="flex flex-col gap-8">
+            <div>{% render 'logo-milk-footer' %}</div>
+            <div>
+                <div class="text-sm leading-5">
+                    © 2024 Milk DENMARK. All rights reserved.
+                </div>
+                <div class="flex flex-row gap-4 text-sm leading-5">
+                    <a href="">Terms</a>
+                    <a href="">Privacy</a>
+                    <a href="">Return Policy</a>
+                </div>
             </div>
         </div>
-        <div class="flex flex-col gap-4">
-            <h1 class="font-causten leading-6">USERS</h1>
-            <div class="flex flex-col gap-2">
-                <a href="" class="leading-6">Account</a>
-                <a href="" class="leading-6">Orders</a>
-                <a href="" class="leading-6">Saved</a>
+        <div class="flex flex-row text-[16px] gap-20">
+            <div class="flex flex-col gap-4">
+                <h1 class="font-causten leading-6">SHOP</h1>
+                <div class="flex flex-col gap-2">
+                    <a href="" class="leading-6">By Collection</a>
+                    <a href="" class="leading-6">By Color</a>
+                    <a href="" class="leading-6">By Style</a>
+                </div>
             </div>
-        </div>
-        <div class="flex flex-col gap-4">
-            <h1 class="font-causten leading-6">COMPANY</h1>
-            <div class="flex flex-col gap-2">
-                <a href="" class="leading-6">About</a>
-                <a href="" class="leading-6">Contact</a>
-                <a href="" class="text-3xl font-semibold leading-6 -my-[3px] -ml-[3px]"><i
-                        class='bx bxl-instagram'></i></a>
+            <div class="flex flex-col gap-4">
+                <h1 class="font-causten leading-6">USERS</h1>
+                <div class="flex flex-col gap-2">
+                    <a href="" class="leading-6">Account</a>
+                    <a href="" class="leading-6">Orders</a>
+                    <a href="" class="leading-6">Saved</a>
+                </div>
+            </div>
+            <div class="flex flex-col gap-4">
+                <h1 class="font-causten leading-6">COMPANY</h1>
+                <div class="flex flex-col gap-2">
+                    <a href="" class="leading-6">About</a>
+                    <a href="" class="leading-6">Contact</a>
+                    <a href="" class="text-3xl font-semibold leading-6 -my-[3px] -ml-[3px]"><i
+                            class='bx bxl-instagram'></i></a>
+                </div>
             </div>
         </div>
     </div>
