--- a/assets/application.css
+++ b/assets/application.css
@@ -554,40 +554,6 @@ video {
   --tw-contain-style:  ;
 }
 
-.container {
-  width: 100%;
-}
-
-@media (min-width: 640px) {
-  .container {
-    max-width: 640px;
-  }
-}
-
-@media (min-width: 768px) {
-  .container {
-    max-width: 768px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .container {
-    max-width: 1024px;
-  }
-}
-
-@media (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
-  }
-}
-
-@media (min-width: 1536px) {
-  .container {
-    max-width: 1536px;
-  }
-}
-
 .fixed {
   position: fixed;
 }
@@ -612,6 +578,14 @@ video {
   top: 1.25rem;
 }
 
+.top-\[0px\] {
+  top: 0px;
+}
+
+.top-0 {
+  top: 0px;
+}
+
 .z-0 {
   z-index: 0;
 }
@@ -620,16 +594,45 @@ video {
   z-index: 10;
 }
 
-.z-50 {
-  z-index: 50;
-}
-
 .z-30 {
   z-index: 30;
 }
 
+.z-50 {
+  z-index: 50;
+}
+
+.-z-0 {
+  z-index: 0;
+}
+
+.z-\[1000\] {
+  z-index: 1000;
+}
+
+.-z-40 {
+  z-index: -40;
+}
+
+.-z-10 {
+  z-index: -10;
+}
+
+.-z-20 {
+  z-index: -20;
+}
+
+.z-40 {
+  z-index: 40;
+}
+
 .-m-3 {
   margin: -0.75rem;
+}
+
+.-my-\[3px\] {
+  margin-top: -3px;
+  margin-bottom: -3px;
 }
 
 .mx-1 {
@@ -682,18 +685,12 @@ video {
   margin-bottom: 2rem;
 }
 
-.-my-\[6px\] {
-  margin-top: -6px;
-  margin-bottom: -6px;
-}
-
-.-my-\[3px\] {
-  margin-top: -3px;
-  margin-bottom: -3px;
-}
-
 .-ml-5 {
   margin-left: -1.25rem;
+}
+
+.-ml-\[3px\] {
+  margin-left: -3px;
 }
 
 .mb-2 {
@@ -730,34 +727,6 @@ video {
 
 .mt-5 {
   margin-top: 1.25rem;
-}
-
-.-mt-\[4px\] {
-  margin-top: -4px;
-}
-
-.-mt-\[5px\] {
-  margin-top: -5px;
-}
-
-.-mt-\[6px\] {
-  margin-top: -6px;
-}
-
-.-ml-\[1px\] {
-  margin-left: -1px;
-}
-
-.-ml-\[4px\] {
-  margin-left: -4px;
-}
-
-.-ml-\[3px\] {
-  margin-left: -3px;
-}
-
-.-mb-\[3px\] {
-  margin-bottom: -3px;
 }
 
 .block {
@@ -817,8 +786,16 @@ video {
   height: 20rem;
 }
 
+.h-96 {
+  height: 24rem;
+}
+
 .h-\[150px\] {
   height: 150px;
+}
+
+.h-\[1px\] {
+  height: 1px;
 }
 
 .h-\[360px\] {
@@ -841,14 +818,6 @@ video {
   height: 100vh;
 }
 
-.h-1 {
-  height: 0.25rem;
-}
-
-.h-\[1px\] {
-  height: 1px;
-}
-
 .w-0 {
   width: 0px;
 }
@@ -861,6 +830,10 @@ video {
   width: 1.25rem;
 }
 
+.w-\[106px\] {
+  width: 106px;
+}
+
 .w-\[150px\] {
   width: 150px;
 }
@@ -871,18 +844,6 @@ video {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-auto {
-  width: auto;
-}
-
-.w-\[\] {
-  width: ;
-}
-
-.w-\[106px\] {
-  width: 106px;
 }
 
 .max-w-4xl {
@@ -919,8 +880,8 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-y-\[50\%\] {
-  --tw-translate-y: -50%;
+.-translate-y-\[100\%\] {
+  --tw-translate-y: -100%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -939,8 +900,43 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-y-\[100\%\] {
-  --tw-translate-y: -100%;
+.-translate-y-\[100px\] {
+  --tw-translate-y: -100px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-\[100\%\] {
+  --tw-translate-y: 100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-\[10px\] {
+  --tw-translate-y: 10px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-\[1px\] {
+  --tw-translate-y: 1px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-\[0px\] {
+  --tw-translate-y: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-x-\[100px\] {
+  --tw-translate-x: -100px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-x-\[100\%\] {
+  --tw-translate-x: -100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-\[0\%\] {
+  --tw-translate-y: 0%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -970,16 +966,8 @@ video {
   list-style-type: decimal;
 }
 
-.grid-flow-row {
-  grid-auto-flow: row;
-}
-
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
-}
-
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-row {
@@ -1022,6 +1010,22 @@ video {
   gap: 0.25rem;
 }
 
+.gap-10 {
+  gap: 2.5rem;
+}
+
+.gap-16 {
+  gap: 4rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.gap-20 {
+  gap: 5rem;
+}
+
 .gap-3 {
   gap: 0.75rem;
 }
@@ -1034,6 +1038,10 @@ video {
   gap: 1.5rem;
 }
 
+.gap-8 {
+  gap: 2rem;
+}
+
 .gap-\[20px\] {
   gap: 20px;
 }
@@ -1044,34 +1052,6 @@ video {
 
 .gap-\[40px\] {
   gap: 40px;
-}
-
-.gap-2 {
-  gap: 0.5rem;
-}
-
-.gap-10 {
-  gap: 2.5rem;
-}
-
-.gap-40 {
-  gap: 10rem;
-}
-
-.gap-\[\] {
-  gap: ;
-}
-
-.gap-8 {
-  gap: 2rem;
-}
-
-.gap-16 {
-  gap: 4rem;
-}
-
-.gap-20 {
-  gap: 5rem;
 }
 
 .space-x-10 > :not([hidden]) ~ :not([hidden]) {
@@ -1135,16 +1115,12 @@ video {
   border-radius: 0.5rem;
 }
 
-.rounded-sm {
-  border-radius: 0.125rem;
-}
-
-.rounded {
-  border-radius: 0.25rem;
-}
-
 .rounded-md {
   border-radius: 0.375rem;
+}
+
+.rounded-sm {
+  border-radius: 0.125rem;
 }
 
 .border {
@@ -1164,6 +1140,11 @@ video {
 .bg-\[\#4F4F4F\] {
   --tw-bg-opacity: 1;
   background-color: rgb(79 79 79 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#D2CBB8\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(210 203 184 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#F6F0E4\] {
@@ -1204,15 +1185,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#D2CBB8\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(210 203 184 / var(--tw-bg-opacity));
-}
-
-.bg-\[\] {
-  background-color: ;
 }
 
 .fill-\[\#445442\] {
@@ -1256,28 +1228,8 @@ video {
   padding: 1.25rem;
 }
 
-.p-\[\] {
-  padding: ;
-}
-
-.p-\[4\] {
-  padding: 4;
-}
-
-.p-\[20px\] {
-  padding: 20px;
-}
-
-.p-\[16px\] {
-  padding: 16px;
-}
-
 .p-\[17px\] {
   padding: 17px;
-}
-
-.p-\[80px\] {
-  padding: 80px;
 }
 
 .px-1 {
@@ -1320,6 +1272,11 @@ video {
   padding-right: 104px;
 }
 
+.px-\[24px\] {
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
 .px-\[25px\] {
   padding-left: 25px;
   padding-right: 25px;
@@ -1333,6 +1290,11 @@ video {
 .py-10 {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
+}
+
+.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
 }
 
 .py-2 {
@@ -1353,6 +1315,11 @@ video {
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 
 .py-6 {
@@ -1380,6 +1347,11 @@ video {
   padding-bottom: 196px;
 }
 
+.py-\[20px\] {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
 .py-\[240px\] {
   padding-top: 240px;
   padding-bottom: 240px;
@@ -1400,38 +1372,20 @@ video {
   padding-bottom: 64px;
 }
 
-.px-\[\] {
-  padding-left: ;
-  padding-right: ;
+.pb-\[104px\] {
+  padding-bottom: 104px;
 }
 
-.px-\[24px\] {
-  padding-left: 24px;
-  padding-right: 24px;
-}
-
-.py-\[\] {
-  padding-top: ;
-  padding-bottom: ;
-}
-
-.py-\[20px\] {
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-
-.py-16 {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
+.pl-\[104px\] {
+  padding-left: 104px;
 }
 
 .pl-\[20px\] {
   padding-left: 20px;
+}
+
+.pr-\[104px\] {
+  padding-right: 104px;
 }
 
 .pr-\[20px\] {
@@ -1440,18 +1394,6 @@ video {
 
 .pt-8 {
   padding-top: 2rem;
-}
-
-.pl-\[104px\] {
-  padding-left: 104px;
-}
-
-.pb-\[104px\] {
-  padding-bottom: 104px;
-}
-
-.pr-\[104px\] {
-  padding-right: 104px;
 }
 
 .pt-\[80px\] {
@@ -1484,8 +1426,16 @@ video {
   font-size: 12px;
 }
 
+.text-\[16px\] {
+  font-size: 16px;
+}
+
 .text-\[18px\] {
   font-size: 18px;
+}
+
+.text-\[20px\] {
+  font-size: 20px;
 }
 
 .text-\[28px\] {
@@ -1517,23 +1467,6 @@ video {
   line-height: 1rem;
 }
 
-.text-\[32px\] {
-  font-size: 32px;
-}
-
-.text-\[20px\] {
-  font-size: 20px;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
-.text-\[16px\] {
-  font-size: 16px;
-}
-
 .font-bold {
   font-weight: 700;
 }
@@ -1548,6 +1481,14 @@ video {
 
 .uppercase {
   text-transform: uppercase;
+}
+
+.leading-4 {
+  line-height: 1rem;
+}
+
+.leading-5 {
+  line-height: 1.25rem;
 }
 
 .leading-6 {
@@ -1566,18 +1507,6 @@ video {
   line-height: 1.625;
 }
 
-.leading-4 {
-  line-height: 1rem;
-}
-
-.leading-5 {
-  line-height: 1.25rem;
-}
-
-.tracking-tighter {
-  letter-spacing: -0.05em;
-}
-
 .tracking-wider {
   letter-spacing: 0.05em;
 }
@@ -1585,6 +1514,11 @@ video {
 .text-\[\#282828\] {
   --tw-text-opacity: 1;
   color: rgb(40 40 40 / var(--tw-text-opacity));
+}
+
+.text-\[\#F6F0E4\] {
+  --tw-text-opacity: 1;
+  color: rgb(246 240 228 / var(--tw-text-opacity));
 }
 
 .text-blue-600 {
@@ -1630,15 +1564,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-\[\] {
-  color: ;
-}
-
-.text-\[\#F6F0E4\] {
-  --tw-text-opacity: 1;
-  color: rgb(246 240 228 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -1915,16 +1840,12 @@ video {
     height: 250px;
   }
 
-  .lg\:h-auto {
-    height: auto;
-  }
-
-  .lg\:h-0 {
-    height: 0px;
-  }
-
   .lg\:h-\[600px\] {
     height: 600px;
+  }
+
+  .lg\:h-auto {
+    height: auto;
   }
 
   .lg\:w-\[100px\] {
@@ -1935,36 +1856,20 @@ video {
     width: 45%;
   }
 
+  .lg\:w-\[508px\] {
+    width: 508px;
+  }
+
   .lg\:w-\[55\%\] {
     width: 55%;
-  }
-
-  .lg\:w-\[\] {
-    width: ;
-  }
-
-  .lg\:w-\[650px\] {
-    width: 650px;
-  }
-
-  .lg\:w-auto {
-    width: auto;
   }
 
   .lg\:w-full {
     width: 100%;
   }
 
-  .lg\:w-\[508px\] {
-    width: 508px;
-  }
-
   .lg\:min-w-\[650px\] {
     min-width: 650px;
-  }
-
-  .lg\:max-w-full {
-    max-width: 100%;
   }
 
   .lg\:flex-1 {
@@ -1988,16 +1893,12 @@ video {
     justify-content: center;
   }
 
-  .lg\:gap-\[52px\] {
-    gap: 52px;
-  }
-
   .lg\:gap-4 {
     gap: 1rem;
   }
 
-  .lg\:gap-5 {
-    gap: 1.25rem;
+  .lg\:gap-\[52px\] {
+    gap: 52px;
   }
 
   .lg\:p-\[104px\] {
@@ -2014,11 +1915,6 @@ video {
     padding-bottom: 256px;
   }
 
-  .lg\:py-\[214px\] {
-    padding-top: 214px;
-    padding-bottom: 214px;
-  }
-
   .lg\:text-center {
     text-align: center;
   }
@@ -2031,13 +1927,13 @@ video {
     font-size: 32px;
   }
 
+  .lg\:text-\[40px\] {
+    font-size: 40px;
+  }
+
   .lg\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
-  }
-
-  .lg\:text-\[40px\] {
-    font-size: 40px;
   }
 
   .lg\:leading-10 {
@@ -2048,20 +1944,8 @@ video {
     line-height: 1.5rem;
   }
 
-  .lg\:leading-loose {
-    line-height: 2;
-  }
-
-  .lg\:leading-relaxed {
-    line-height: 1.625;
-  }
-
   .lg\:leading-\[50px\] {
     line-height: 50px;
-  }
-
-  .lg\:text-\[\] {
-    color: ;
   }
 }
 
