--- a/sections/content-two.liquid
+++ b/sections/content-two.liquid
@@ -6,18 +6,21 @@
     }
 </style>
 
-<section class="w-full bg-white py-[64px] px-[25px] flex flex-col lg:flex-row gap-[40px] lg:gap-[52px] lg:p-[104px]">
-    <div class="content-two-bg h-[440px] lg:h-auto lg:w-[45%] w-full rounded-2xl">
-    </div>
-    <div class="flex flex-col gap-[24px] lg:w-[55%]">
-        <div class="text-[28px] font-semibold leading-9 lg:text-[32px] lg:leading-10">
-            Designed with Heart
+<section class="w-full bg-white">
+    <div class="py-[64px] px-[25px] flex flex-col lg:flex-row gap-[40px] lg:gap-[52px] lg:p-[104px] max-w-[1280px] mx-auto">
+        <div class="content-two-bg h-[440px] lg:h-auto lg:w-[45%] w-full rounded-2xl">
         </div>
-        <div class="text-[18px] leading-6 lg:text-[28px] lg:leading-10">
-            Every MILK™ babygrow tells the story of childhood fashion, but with sketches in the place of words.
-            Inspired by afternoon walks through autumn and spring, each flower bud is a tickle of nature in the form
-            of a sweet silhouette. The soft textures swaddle more than baby&apos;s skin, but envelope families in the
-            patterns of fairytale fashions. Designed with heart, inspired in Denmark.
+        <div class="flex flex-col gap-[24px] lg:w-[55%]">
+            <div class="text-[28px] font-semibold leading-9 lg:text-[32px] lg:leading-10">
+                Designed with Heart
+            </div>
+            <div class="text-[18px] leading-6 lg:text-[28px] lg:leading-10">
+                Every MILK™ babygrow tells the story of childhood fashion, but with sketches in the place of words.
+                Inspired by afternoon walks through autumn and spring, each flower bud is a tickle of nature in the form
+                of a sweet silhouette. The soft textures swaddle more than baby&apos;s skin, but envelope families in
+                the
+                patterns of fairytale fashions. Designed with heart, inspired in Denmark.
+            </div>
         </div>
     </div>
 </section>
