--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -15,7 +15,7 @@
     <div class="py-[196px] md:hidden">
         {% render 'hero-content-mobile' %}
     </div>
-    <div class="hidden md:flex justify-center w-full p-20 py-20 md:py-36 md:px-32 lg:py-[256px] lg:px-[184px]">{% render 'hero-content' %}</div>
+    <div class="hidden md:flex justify-center w-full p-20 py-20 md:py-36 md:px-32 lg:py-[256px] lg:px-[184px] max-w-[1280px]">{% render 'hero-content' %}</div>
 </section>
 
 
