--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -1,4 +1,4 @@
-<div class='w-full py-6 px-3'>
+<div class='w-full py-6 px-3 relative -z-10'>
 	<div class='border bg-white shadow-lg rounded-lg overflow-hidden'>
 		<a href='{{ product_product.url }}'>
 			{% if product_product.featured_image %}
